fix z-index section cover

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -12,7 +12,7 @@
   max-width: 1184px;
   min-height: 740px;
   background-color: rgba(42, 44, 47, 0.3);
-  z-index: 1;
+  z-index: 2;
 }
 
 .cover__link:hover {
